--- a/styles/style.css
+++ b/styles/style.css
@@ -274,7 +274,7 @@ margin: 0px 150px 0 150px;
 
 /* Form section start  */
 .form-section{
-    width: 75%;
+    width: 76%;
     margin: auto;
     display: flex;
     justify-content: center;
@@ -336,5 +336,44 @@ margin: 0px 150px 0 150px;
 /* main Style end */
 
 /* footer Style start */
+footer{
+    background-color: white;
+    margin-top: 50px;
+}
+.footer{
+    align-items: center;
+    text-align: center;
+    padding: 100px 500px 200px 500px;
+}
 
+.footer-div-1{
+    margin-bottom: 20px;
+}
+
+.footer-div-1-title{
+    font-size: 100px;
+    margin-bottom: 0;
+}
+.footer-div-1-des{
+    color: #8987a1;
+    width: 100%;
+}
+
+
+
+.footer-div-2{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    gap: 50px;
+    /* justify-content: space-evenly; */
+    align-items: center;
+    /* width: 70%; */
+}
+
+.footer-div-2 a{
+    text-decoration: none;
+        color: #8987a1;
+
+}
 /* footer Style end */
