--- a/styles/style.css
+++ b/styles/style.css
@@ -109,7 +109,7 @@ margin: 0px 150px 0 150px;
 }
 
 .action-img{
-    border-radius: 16px;
+    border-radius: 50px;
 }
 
 
@@ -280,7 +280,7 @@ margin: 0px 150px 0 150px;
     justify-content: center;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
     
 }
 
@@ -328,7 +328,7 @@ margin: 0px 150px 0 150px;
 
 .form-btn{
     font-size: 16px;
-    font-weight: 400;
+    font-weight: 600;
     padding: 10px 140px 10px 140px;
     margin-top: 20px;
 }
@@ -337,8 +337,12 @@ margin: 0px 150px 0 150px;
 
 /* footer Style start */
 footer{
+    width: 100%;
     background-color: white;
-    margin-top: 50px;
+    /* margin-top: 50px; */
+    margin: auto ;
+    border: 1px solid rgba(119, 118, 118, 0.13);
+
 }
 .footer{
     align-items: center;
